Clean up code. Fix small errors. Add readme.

--- a/core.html
+++ b/core.html
@@ -23,7 +23,7 @@
 
     <style>
         #map {
-            margin-top: -112px;
+            top: 0;
             position: absolute;
             height: 100%;
             width: 100%;
@@ -253,9 +253,9 @@
             </div>
         </div>
 
-        <!-- <div id="maps" class="row"> -->
-            <div id="map" class="row"></div>
-        <!-- </div> -->
+        <div class="row">
+            <div id="map"></div>
+        </div>
 
         <div id="filter-holder">
             <div class="card paper" id="filter-modal">
