Fixed map malfunction.

--- a/core.html
+++ b/core.html
@@ -16,8 +16,8 @@
     <script src="res/scripts/interests.js" defer></script>
 
     <script>
-        $(document).ready(function () {
-            $("#maps").hide();
+        $(document).ready(function(){
+            $("#map").hide();
         });
     </script>
 
@@ -41,7 +41,6 @@
             width: 220px;
             text-align: center;
         }
-
     </style>
 
     <title>Unchained</title>
